0.4.11-rc7
Added input sanitization/resolution for many Discord commands to accept many intuitive forms for groups, users, worlds, etc. (VRChat Web links, group short codes, etc.)
Added `/vrchat-group` Discord command, with `create-instance` and `close-instance` subcommands
Added customizability for JVM options via `./java.options` file
Removed attachment containing user state to moderation events (will rework to improve usability)